# ParaBlit

./: .gitignore  README.md
VKR/: .p4ignore_parablit.txt  CMakeLists.txt  SETUP.txt  VKR.sln  buildalllibs.bat  buildassets.bat  buildassets_debug.bat  buildsinglelib.bat  clonerepo.bat  genbuild.bat  genbuild.py  genbuild_all.py  opensln.bat  opensln.py  pb_genbuild_example.bat  rebuildassets.bat  runbuild_debug.bat  runbuild_release.bat  setp4ignore.bat  setupfull.bat  synclibs.bat
VKR/AssetEncoder/: AssetBinaryDatabase.cpp  AssetBinaryDatabaseReader.cpp  AssetEncoder.vcxproj  AssetEncoder.vcxproj.filters  EncoderBase.cpp
VKR/AssetEncoder/include/AssetEncoder/: AssetBinaryDatabase.h  AssetDatabaseReader.h  AssetEncoderLib.h  EncoderBase.h
VKR/AssetPipeline/: AssetPipeline.vcxproj  AssetPipeline.vcxproj.filters  AssetPropertyFile.ixx  LightningBC7.h  MeshEncoder.cpp  MeshEncoder.h  PipelineApplication.cpp  PipelineApplication.h  PipelineShader.cpp  PipelineShader.h  SpirvShaderEncoder.cpp  SpirvShaderEncoder.h  Texture2DEncoder.cpp  Texture2DEncoder.h  main.cpp
VKR/AssetPipeline/Include/AssetPipeline/: TextureShared.h
VKR/Assets/Shaders/: CompileGLSL.bat
VKR/Assets/Shaders/GLSL/: cs_bloom_color_extraction.comp  cs_blur_h_fast.comp  cs_blur_v.comp  cs_blur_v_fast.comp  cs_compute_gaussian_blur.comp  cs_drawbatch_cull.comp  cs_drawbatch_cull_tasks.comp  cs_drawbatch_setup.comp  cs_managedinstance_with_frustrum_cull.comp  cs_merge_bloom.comp  cs_populate_indices.comp  cs_populate_meshlets.comp  cs_reflection_blur.comp  cs_shadow_accum.comp  cs_shadow_blur.comp  cs_shadow_blur_h_fast.comp  cs_shadow_blur_v_fast.comp  cs_update_top_level_acceleration_structure_instances.comp  def_directional_light_shadow.glsl  fs_char.frag  fs_convolute_env_prefilter_cube.frag  fs_cubegen.frag  fs_debug_line.frag  fs_def_directional_light_shadow.frag  fs_def_point_light.frag  fs_gen_spec_bdrf_lut.frag  fs_merge_bloom.frag  fs_obj.frag  fs_obj_def_batch.frag  fs_obj_def_mesh_batch.frag  fs_shadow_accum.frag  fs_skybox.frag  fs_ssao.frag  mergeRenderPlanes.glsl  ms_example.mesh  ms_obj_batch.mesh  ms_obj_task_batch.mesh  ms_obj_task_batch_excl_pos.mesh  rt_pathtrace.rgen  rt_raytrace_example.rgen  (+12 more)
VKR/Engine.AssetEncoder/: CMakeLists.txt
VKR/Engine.AssetEncoder/include/Engine.AssetEncoder/: AssetBinaryDatabase.h  AssetDatabaseReader.h  EncoderBase.h
VKR/Engine.AssetEncoder/src/Database/: AssetBinaryDatabase.cpp  AssetBinaryDatabaseReader.cpp  EncoderBase.cpp
VKR/Engine.AssetPipeline/: CMakeLists.txt
VKR/Engine.AssetPipeline/src/: AssetPropertyFile.ixx  Bounds.h  LightningBC7.h  MeshletOctree.cpp  MeshletOctree.h  PipelineApplication.cpp  PipelineShader.cpp  PipelineShader.h
VKR/Engine.AssetPipeline/src/Encode/: MeshEncoder.cpp  MeshEncoder.h  SpirvShaderEncoder.cpp  SpirvShaderEncoder.h  Texture2DEncoder.cpp  Texture2DEncoder.h
VKR/Engine.Control/: CMakeLists.txt
VKR/Engine.Control/include/Engine.Control/: ControlLib.h  GUID.h  IDataFile.h  ISettingsParsers.h  Parse.h
VKR/Engine.Control/src/DataClass/: DataClass.cpp  DataClass.h
VKR/Engine.Entity/: CMakeLists.txt
VKR/Engine.Math/: CMakeLists.txt
VKR/Engine.ParaBlit/: CMakeLists.txt  ParaBlit.vcxproj  ParaBlit.vcxproj.filters
VKR/Engine.ParaBlit/src/: BindingCache.h  BufferObject.cpp  BufferObject.h  CommandContext.cpp  CommandContext.h  DescriptorRegistry.cpp  DescriptorRegistry.h  Device.cpp  Device.h  DeviceAllocator.cpp  ICommandContext.cpp  ImageView.cpp  ImageView.h  PBUtil.cpp  PBUtil.h  ParaBlitLog.cpp  PipelineCache.cpp  PipelineCache.h  PoolAllocator.cpp  PoolAllocator.h  RenderPassCache.cpp  RenderPassCache.h  Renderer.cpp  Renderer.h  ShaderModule.cpp  ShaderModule.h  StagingBufferAllocator.cpp  StagingBufferAllocator.h  Texture.cpp  VulkanInstance.cpp
VKR/Engine.Runtime/: CMakeLists.txt
VKR/PipelineAssets/Shaders/: fs_convolute_env_irradiance_cube.frag  fs_meshPreview.frag  fs_screenTexture.frag  vs_cubegen.vert  vs_meshPreview.vert
VKR/VKR/: BindingCache.cpp  BufferObject.cpp  BufferObject.h  CmdContextPool.cpp  CmdContextPool.h  CommandContext.cpp  CommandContext.h  DescriptorRegistry.cpp  DescriptorRegistry.h  Device.cpp  Device.h  DeviceAllocator.cpp  DeviceAllocator.h  ExtensionManager.cpp  ExtensionManager.h  FramebufferCache.cpp  FramebufferCache.h  IBufferObject.h  ICommandContext.cpp  ICommandContext.h  IFrameBufferCache.h  IPipelineCache.h  IRenderPassCache.h  IRenderer.cpp  IRenderer.h  ISwapChain.h  ITexture.cpp  ITexture.h  ITextureViewCache.h  IViewCache.h  ImageView.cpp  ImageView.h  MurmurHash3.cpp  MurmurHash3.h  PBUtil.cpp  PBUtil.h  ParaBlit.vcxproj  ParaBlit.vcxproj.filters  ParaBlitApi.h  ParaBlitDebug.cpp  (+35 more)
VKR/VKR/CLib/: Allocator.cpp  Allocator.h  FixedBlockAllocator.cpp  FixedBlockAllocator.h  String.h  SubAllocator.cpp  SubAllocator.h  Vector.h  Version.txt
VKR/VKRClient/: AOBlurPass.cpp  AOBlurPass.h  AmbientOcclusionPass.cpp  AmbientOcclusionPass.h  Application.cpp  Application.h  BasicColorPass.cpp  BasicColorPass.h  BatchDispatcher.cpp  BloomBlurPass.cpp  BloomBlurPass.h  BloomExtractionPass.cpp  BloomExtractionPass.h  BloomPass.cpp  BloomPass.h  BlurHelper.cpp  BlurHelper.h  Bounds.h  Camera.cpp  Camera.h  ClientPlayground.cpp  ClientPlayground.h  DebugLinePass.cpp  DebugLinePass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  DrawBatch.cpp  DrawBatch.h  FontTexture.cpp  FontTexture.h  GBufferPass.cpp  GBufferPass.h  ManagedInstanceBuffer.h  Material.h  Mesh.cpp  Mesh.h  ObjectDispatcher.cpp  ObjectDispatcher.h  ParaBlitClient.vcxproj  ParaBlitClient.vcxproj.filters  (+26 more)
VKR/src/: CMakeLists.txt
VKR/src/CLib/: .gitignore  CMakeLists.txt
VKR/src/Engine.AssetEncoder/: CMakeLists.txt
VKR/src/Engine.AssetPipeline/: CMakeLists.txt
VKR/src/Engine.Control/: CMakeLists.txt
VKR/src/Engine.Entity/: CMakeLists.txt
VKR/src/Engine.Math/: CMakeLists.txt
VKR/src/Engine.ParaBlit/: CMakeLists.txt
VKR/src/Engine.Reflectron/: CMakeLists.txt
VKR/src/Engine.Runtime/: CMakeLists.txt
VKR/src/External.ImGUI/: CMakeLists.txt
VKR/src/compressonator_core/: CMakeLists.txt
(+412 files in other folders)
